api_server_err.log
  File "api_server.py", line 46
    target_path = dir+tstr+".wav"]
                                 ^
SyntaxError: invalid syntax
